--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,70 +1,80 @@
+# SPDX-FileCopyrightText: Copyright © 2021 snek.at
+# SPDX-License-Identifier: EUPL-1.2
+#
+# Use of this source code is governed by an EUPL-1.2 license that can be found
+# in the LICENSE file at https://snek.at/license
+
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#name
-name: Publish
+name: Jaen Publish
 
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#on
-on: [repository_dispatch]
+on:
+  repository_dispatch:
+    types: [update-jaen-data]
 
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobs
 jobs:
-
   # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_id
-  publish:
-
+  jaen-publish:
     # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idruns-on
     runs-on: ubuntu-latest
 
+    env:
+      JAEN_PAYLOAD: ${{ toJson(github.event.client_payload) }}
+  
     # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idsteps
     steps:
+      # https://help.github.com/en/articles/virtual-environments-for-github-actions#default-environment-variables
+      # https://github.com/actions/checkout
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+        with:
+          path: '.'
 
-    # https://help.github.com/en/articles/virtual-environments-for-github-actions#default-environment-variables
-    # https://github.com/actions/checkout
-    - name: Checkout 🛎️
-      uses: actions/checkout@v2.3.1
-      with:
-        path: '.'
+      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
+      - name: Configure GitHub authentication 🔧
 
-    # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-    - name: Configure GitHub authentication 🔧
+        # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsrun
+        run: |
+          echo $JAEN_PAYLOAD
+          echo ${{github.event.client_payload.jaendata_url}}
+          
+          # Git: set identity
+          git config --global user.name "snekmin"
+          git config --global user.email "noreply.snek.at@gmail.com"
 
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-      run: |
+          # Git: set remote  
+          # https://developer.github.com/apps/building-github-apps/authenticating-with-github-apps/#http-based-git-access-by-an-installation
+          git remote set-url origin "https://x-access-token:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git"
 
-        # Git: set identity
-        git config --global user.name "snekmin"
-        git config --global user.email "noreply.snek.at@gmail.com"
+      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
+      - name: Update jaen-data.json
 
-        # Git: set remote  
-        # https://developer.github.com/apps/building-github-apps/authenticating-with-github-apps/#http-based-git-access-by-an-installation
-        git remote set-url origin "https://x-access-token:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git"
+        # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsrun
+        run: |
+          # Create jean-storage branch without history
+          git checkout --orphan jaen-storage
 
-    # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-    - name: Update jaen-data.json
+          # Remove unnecessary files
+          git rm -rf .
 
-      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-      run: |
+          # Create `jaen-data.json`
 
-        # Create jean-storage branch without history
-        git checkout --orphan jaen-storage
+          echo $JAEN_PAYLOAD > jaen-data.json
 
-        # Remove unnecessary files
-        git rm -rf .
+          # reveal what `jaen-data.json` looks like in the logs
+          cat jaen-data.json
 
-        # Create `jaen-data.json`
-        echo '${{ toJson(github.event.client_payload) }}' > jaen-data.json
+          # Git: add, commit, and push changes
+          git add jaen-data.json
+          git commit -m "jaen-publish(jaen-data.json): update jaen-data" || echo "Nothing to commit, working tree clean."
+          GIT_TRACE=1 git push -f --verbose origin jaen-storage
 
-        # reveal what `jaen-data.json` looks like in the logs
-        cat jaen-data.json
-
-        # Git: add, commit, and push changes
-        git add jaen-data.json
-        git commit -m "Update jaen-data.json"
-        GIT_TRACE=1 git push -f --verbose origin jaen-storage
-
-    # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
-    - name: Deploy jean-data to Github Pages 🚀
+      # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsid
+      - name:
+          Deploy jean-data to Github Pages 🚀
           # https://help.github.com/en/articles/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-      run: |
-
+        run: |
           # Create gh-pages branch without history
           git checkout --orphan gh-pages
 
@@ -76,10 +86,9 @@ jobs:
           fi
 
           # Create `jaen-data.json`
-          echo '${{ toJson(github.event.client_payload) }}' > jaen-data.json
+          echo $JAEN_PAYLOAD > jaen-data.json
 
           # Git: add, commit, and push changes
           git add .
-          git commit -m "Update jaen-data.json"
+          git commit -m "jaen-publish(jaen-data.json): update jaen-data" || echo "Nothing to commit, working tree clean."
           GIT_TRACE=1 git push -f --verbose origin gh-pages
-
